# nexus

./: .gitignore  README.md
nexus_backend/: db.sqlite3
nexus_backend/nexus_backend/: asgi.py  settings.py  urls.py  wsgi.py
nexus_backend/nexusapp/: models.py  serializer.py  views.py
nexus_backend/nexusapp/migrations/: 0001_initial.py  0002_rename_deaprtment_react_department.py  0003_compliancelog_threatintelligencemodel_userprofile_and_more.py  0004_remove_userprofile_user_userprofile_username.py  0005_alter_userprofile_organization.py  0006_alter_userprofile_username.py  0007_alter_userprofile_username.py  (+1 more)
nexus_frontend/: package-lock.json  package.json
nexus_frontend/src/: App.css  App.js  BugBounty.css  BugBounty.js  BugDetails.js  BugForm.js  BugList.js  DataFromDjango.js  Header.js  HomePage.js  RustModules.css  RustModules.js
nexusenv/: pyvenv.cfg
nexusrust/: Cargo.toml  Dockerfile  docker-compose.yml  main.rs
nexusrust/compliance/: anonymization.rs
nexusrust/crypto/: encryption.rs  keys.rs
nexusrust/integration/: siem.rs  soar.rs
nexusrust/orchestration/: mod.rs
nexusrust/privacy/: mod.rs
nexusrust/src/: config.rs  crypto.rs  error.rs  federated_sharing.rs  main.rs  network.rs  privacy_preserving_analytics.rs  secure_exchange.rs
nexusrust/src/compliance/: compliance_checks.rs  mod.rs
nexusrust/src/federated_sharing/: dids.rs  mod.rs  storage.rs
nexusrust/src/integration/: mod.rs
nexusrust/src/orchestration/: incident_response.rs  workflow.rs
nexusrust/src/privacy/: differential_privacy.rs  federated_learning.rs
