[package]
name = "nexusrust"
version = "0.1.0"
edition = "2021"


#dependacies
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.12"
reqwest = { version = "0.11", features = ["blocking"] }
lettre = "0.11.7"
ring = "0.17.8"
chrono = "0.4"
log = "0.4"
env_logger = "0.11.3"
