[package]
name = "nexusrust"
version = "0.1.0"
edition = "2021"


#dependacies
[dependencies]
serde = { version = "1.0", features = ["derive"] }
ring = "0.17.8"
serde_json = "1.0"
sysinfo = "0.30.12"
reqwest = { version = "0.12.5", features = ["blocking"] }
lettre = "0.11.7"
chrono = "0.4"
log = "0.4"
env_logger = "0.11.3"
tokio = {version = "1", features = ['full']}
